# OCRlty

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.gpu  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  sitecustomize.py  temporal.yml
.github/workflows/: build-arctic-tilt.yml  build-xformers-wheel.yml
apps/: tilt_api.py
apps/api_gpu/: main.py
configs/: base.yaml  default.yaml
docs/: chat_context.md  chat_context.txt  chat_context_corrected.md  curl_examples.txt  github_runpod_dev_guide.md  ocrlty_context_1.txt  ocrlty_context_2 copy.txt  ocrlty_context_2.md  ocrlty_context_2.txt  project_context_1.md  project_context_2.md  project_context_3.md  project_context_3_git_runpod.md  project_context_3_updated.md  requiremenrs-gpu_new.txt  vllm_wheel_creation.txt
lib/: config.py
lib/pipelines/: invoice_extract.py  tilt_client.py  tilt_prep.py  tilt_prep_1.py
lib/post/: rules.py
notebooks/gpu/: 00_bootstrap.ipynb  samples_assembler.ipynb
scripts/: infer.py  mock_vllm.py  runpod_bootstrap_git (1).sh  runpod_bootstrap_git.sh  start_all.sh  warmup.py
tests/: test_paddle.py  test_paddle_1.py
